COPILIT GO FUCK YORUSEHLF AHSD SAJKHDASNÖKJASDD

--- a/inputs.html
+++ b/inputs.html
@@ -172,6 +172,6 @@ Bx70 Inputs
 </b>
 </div>
 <div class="main">Iputs 1:<p>W W W REN<p><hr style="color:red">
-    <img src="C:\Users\snaken11\Pictures\input1.png" alt=result of the input>
-<div class="main">Iputs 2:<p>mouseXY W W W mouse XY REN<p><hr style="color:red">
+    <img src="input1.png" alt=result of the input><br>
+<div class="main">Iputs 2:<p>mouseXY W W W mouseXY REN<p><hr style="color:red">
     
