Fix typo in inputs section of inputs.html

--- a/inputs.html
+++ b/inputs.html
@@ -171,7 +171,7 @@ Bx70 Inputs
 </div>
 </b>
 </div>
-<div class="main">Iputs 1:<p>W W W REN<p><hr style="color:red">
+<div class="main">Iputs 1:<p>W W W REN<p><hr style="color:red"><br>
     <img src="input1.png" alt=result of the input><br>
 <div class="main">Iputs 2:<p>mouseXY W W W mouseXY REN<p><hr style="color:red">
     
