--- a/inputs.html
+++ b/inputs.html
@@ -172,6 +172,7 @@ Bx70 Inputs
 </b>
 </div>
 <div class="main">Input 1:<p>W W W REN<p><hr style="color:red"><br>
-    <img src="input1.png" alt=result of the input><br>
+    <img src="input1.png" alt=result><br>
 <div class="main">Input 2:<p>mouseXY W W W mouseXY REN<p><hr style="color:red">
+    <video src="https://github.com/Axolotl-in-void/gaq10/blob/main/2025-11-04%2023-21-37%20(online-video-cutter.com).mp4" alt=result>
     
