--- a/inputs.html
+++ b/inputs.html
@@ -175,4 +175,5 @@ Bx70 Inputs
     <img src="input1.png" alt=result><br>
 <div class="main">Input 2:<p>mouseXY W W W mouseXY REN<p><hr style="color:red">
     <video src="https://github.com/Axolotl-in-void/gaq10/blob/main/2025-11-04%2023-21-37%20(online-video-cutter.com).mp4" alt=result>
+<div class="main"><h1>Input3 :</h1><p>mouserightx3 W W</p><hr style="color:red">
     
