--- a/inputs.html
+++ b/inputs.html
@@ -174,7 +174,7 @@ Bx70 Inputs
 <div class="main">Input 1:<p>W W W REN<p><hr style="color:red"><br>
     <img src="input1.png" alt=result><br>
 <div class="main">Input 2:<p>mouseXY W W W mouseXY REN<p><hr style="color:red"><br>
-    <video src="https://github.com/Axolotl-in-void/gaq10/blob/main/2025-11-04%2023-21-37%20(online-video-cutter.com).mp4" alt=result><br>
+    <video src="inputs2.mp4" alt=result><br>
         <div class="main"><h1>Input3 :</h1><p>mouseXY</p><hr style="color:red"><br>
 <div class="main"><h1>(no result)Input4 :</h1><p>mouserightx3 W W</p><hr style="color:red"><br>
     
