Fix HTML structure for video inputs

--- a/inputs.html
+++ b/inputs.html
@@ -175,8 +175,8 @@ Bx70 Inputs
 <div class="main">Input 1:<p>W W W REN<p><hr style="color:red"><br>
     <img src="input1.png" alt=result><br>
 <div class="main">Input 2:<p>mouseXY W W W mouseXY REN<p><hr style="color:red"><br>
-    <video src="inputs2.mp4" alt=result width="995" height="589"><br>
+    <video src="inputs2.mp4" alt=result width="995" height="589"><br><p>
         <div class="main"><h1>Input3 :</h1><p>mouseXY</p><hr style="color:red"><br>
-                <video src="inputs3.mp4" alt=result width="995" height="589"><br>
-<div class="main"><h1>(no result)Input4 :</h1><p>mouserightx3 W W</p><hr style="color:red"><br>
+                <video src="inputs3.mp4" alt=result width="995" height="589"><br><p>
+<div class="main"><h1>(no result)Input4 :</h1><p>mouserightx3 W W</p><hr style="color:red"><br><p>
     
