fixed my fucked unreadable code

--- a/inputs.html
+++ b/inputs.html
@@ -171,12 +171,43 @@ Bx70 Inputs
 </div>
 </b>
 </div>
-    <div class="main">Inputs On hl2dm for BX70<p><hr style="color:red"><br>
-<div class="main">Input 1:<p>W W W REN<p><hr style="color:red"><br>
-    <img src="input1.png" alt=result><br></video></p></div>
-<div class="main">Input 2:<p>mouseXY W W W mouseXY REN<p><hr style="color:red"><br>
-    <video src="inputs2.mp4" alt=result width="995" height="589"><br><p></video></p></div>
-        <div class="main"><h1>Input3 :</h1><p>mouseXY</p><hr style="color:red"><br>
-                <video src="inputs3.mp4" alt=result width="995" height="589"><br><p>
-<div class="main"><h1>(no result)Input4 :</h1><p>mouserightx3 W W</p><hr style="color:red"><br><p></video></p></div>
-    
+<div class="main">
+  <h2>Inputs On hl2dm for BX70</h2>
+  <hr style="color:red">
+  <br>
+</div>
+
+<div class="main">
+  <h3>Input 1:</h3>
+  <p>W W W REN</p>
+  <hr style="color:red">
+  <br>
+  <img src="input1.png" alt="result">
+  <br>
+</div>
+
+<div class="main">
+  <h3>Input 2:</h3>
+  <p>mouseXY W W W mouseXY REN</p>
+  <hr style="color:red">
+  <br>
+  <video src="inputs2.mp4" alt="result" width="995" height="589" controls></video>
+  <br>
+</div>
+
+<div class="main">
+  <h3>Input 3:</h3>
+  <p>mouseXY</p>
+  <hr style="color:red">
+  <br>
+  <video src="inputs3.mp4" alt="result" width="995" height="589" controls></video>
+  <br>
+</div>
+
+<div class="main">
+  <h3>(no result) Input 4:</h3>
+  <p>mouserightx3 W W</p>
+  <hr style="color:red">
+  <br>
+</div>
+
