--- a/inputs.html
+++ b/inputs.html
@@ -215,7 +215,7 @@ Bx70 Inputs
 
 <div class="main">
   <h3>(no result) Input 4:</h3>
-  <p>mouserightx3 W W</p>
+  <p>mouserightYX(3) W W</p>
   <hr style="color:red">
   <br>
 </div>
