--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
     <p>Status: gaq_cry.bsp</p>
     <p>ID: QAG10</p>
     <p>QAG: 10
+	<p>also known as quagmire 10 :tm:</p>
 	 <p>qag 9™️?: no u</p>
     <p>made this because NOTHING EVER HAPPENS ON gaq9™️ (ps: it’s pronounced “quag 10”)</p>
     <p>Gaq9 BUT FOR gshift WOHOOOOOOOO</p>
