Update input configurations in inputs.html

--- a/inputs.html
+++ b/inputs.html
@@ -119,10 +119,10 @@
 // ✅ EASY CONFIG: add your inputs here
 const inputs = [
   { text: "W W W REN", image: "input1.png" },
-  { text: "mouseXY W W W mouseXY REN", video: "inputs2.mp4" },
-  { text: "mouseXY", video: "inputs3.mp4" },
-  { text: "mouserightx3 W W", noResult: true },
-  { text: "Test image sample", image: "sbox.jpg" }
+  { text: "mouseXR W W W mouseXY REN", video: "inputs2.mp4" },
+  { text: "mouseXR", video: "inputs3.mp4" },
+  { text: "mouseXR(3) W W", noResult: true },
+  { text: "mouseXR(2) W W W", noResult: true }
 ];
 
 // build grid
