let's see what happens when the predator... becomes the prey

--- a/index.html
+++ b/index.html
@@ -214,6 +214,8 @@
   <a href="recaps.html"><button class="play-button">Recaps</button></a>
    <a href="dusty.html"><button class="play-button">scuffed</button></a>
 	<a href="inputs.html"><button class="play-button">Inputs (gshift/bx70)</button></a>
+	<a href="https://ollix27.neocities.org"<button class="play-button">GIGADWARFS OWN WEBSITE!!!1!!</button></a>
+	
 
   <div id="time" class="time"></div>
 
